--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -129,6 +129,7 @@
                             @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Adjunto(a)") @Html.Label("Profesor(a) Adjunto(a)")<br />
                             @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Catedrático(a)") @Html.Label("Profesor(a) Catedrático(a)")<br />
                             @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Invitado(a)") @Html.Label("Profesor(a) Invitado(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Asociado(a)") @Html.Label("Profesor(a) Asociado(a)")<br />
                             @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Otro") @Html.Label("Otro")<br />
                             @Html.ValidationMessageFor(participanteModel => participanteModel.condicion, "", new { @class = "text-danger" })
                         </div>
