--- a/webMetics/Views/Shared/Info.cshtml
+++ b/webMetics/Views/Shared/Info.cshtml
@@ -16,11 +16,9 @@
     <div>
         <h5 class="text-uppercase" style="color: #CED4DA">Contactos</h5>
         <p>
-            Central telefónica: (506) <a href="tel:2511-5015">2511-5015</a> <br>
-            Consultas docentes: <a href="mailto:consultas.metics@ucr.ac.cr">consultas.metics@ucr.ac.cr</a> <br>
-            Consultas técnicas: <a href="mailto:soporte.metics@ucr.ac.cr">soporte.metics@ucr.ac.cr</a> <br>
-            Solicitud de capacitación, reuniones, asesorías a unidades académicas: <a href="mailto:unidad.metics@ucr.ac.cr">unidad.metics@ucr.ac.cr</a><br>
-            Asuntos administrativos: <a href="mailto:administracion.metics@ucr.ac.cr">administracion.metics@ucr.ac.cr</a>
+            Central telefónica: (506) <a href="tel:2511-5015" style="text-decoration: none; color: inherit;">2511-5015</a> <br>
+            Consultas docentes: <a href="mailto:consultas.metics@ucr.ac.cr" style="text-decoration: none; color: inherit;">consultas.metics@ucr.ac.cr</a> <br>
+            Consultas técnicas: <a href="mailto:soporte.metics@ucr.ac.cr" style="text-decoration: none; color: inherit;">soporte.metics@ucr.ac.cr</a> <br>
         </p>
     </div>
 </body>
