--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -15,29 +15,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <div style="background-color: #0ccbf0; height: 95px;">
+    <div style="background-color: #095998; height: 95px;">
         <div class="logo-container">
-            <div class="d-inline-flex justify-content-start align-items-center" style="position: absolute; z-index: 0;">
-                <div class="logo-link mx-3 py-2">
+            <div class="d-flex justify-content-between align-items-center" style="position: relative; z-index: 0;">
+
+                <div class="logo-link ms-4 py-2">
                     <a href="https://www.ucr.ac.cr/">
-                        <img src="@Url.Content("~/images/UCR_logo.png")" style="width: auto; height: 80px;" alt="Logo Universidad de Costa Rica" />
+                        <img src="@Url.Content("~/images/ucr.svg")" style="height: 65px; width: auto;" alt="Logo Universidad de Costa Rica" />
                     </a>
                 </div>
 
-                <div class="logo-link me-3 py-2">
-                    <a href="https://metics.ucr.ac.cr/es/">
-                        <img src="@Url.Content("~/images/METICS_logo.png")" style="width: auto; height: 80px;" alt="Logo METICS" />
-                    </a>
-                </div>
+                <div class="d-flex justify-content-end align-items-center">
+                    <div class="logo-link me-3 py-2">
+                        <a href="https://vd.ucr.ac.cr/" style="display: block;">
+                            <img src="@Url.Content("~/images/VD-01.png")" style="height: 56px; width: auto;" alt="Logo Vicerrectoria de Docencia" />
+                        </a>
+                    </div>
 
-                <div class="logo-link py-2">
-                    <a href="https://vd.ucr.ac.cr/" style="display: block;">
-                        <img src="@Url.Content("~/images/VD_logo.png")" style="width: auto; height: 60px;" alt="Logo Vicerrectoria de Docencia" />
-                    </a>
+                    <div class="logo-link me-4 py-2">
+                        <a href="https://metics.ucr.ac.cr/es/">
+                            <img src="@Url.Content("~/images/METICS-01.png")" style="height: 65px; width: auto;" alt="Logo METICS" />
+                        </a>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
+
 
 
 
@@ -135,35 +140,7 @@
                     <div class="col-md-4">
                         <!-- Información de los contactos  -->
                         @{await Html.RenderPartialAsync("~/Views/Shared/Info.cshtml"); }
-                    </div>
-                    <div class="col-md-4">
-                        <h5 class="text-uppercase" style="color: #CED4DA">Ubicación</h5>
-
-                        <p>
-                            De la Rotonda de la Hispanidad 100 metros al Este, 100 metros al Norte y 100 metros al Este. Antiguos apartamentos Pachecho Dominguez, San Pedro de Montes de Oca.
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <h5 class="text-uppercase" style="color: #CED4DA">Enlaces de interés</h5>
-
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="https://metics.ucr.ac.cr/es/mediacion-virtual" class="text-white">Mediación Virtual</a>
-                            </li>
-                            <li>
-                                <a href="https://sibdi.ucr.ac.cr" class="text-white">SIBDI</a>
-                            </li>
-                            <li>
-                                <a href="https://ematricula.ucr.ac.cr/ematricula/" class="text-white">eMatricula</a>
-                            </li>
-                            <li>
-                                <a href="https://ori.ucr.ac.cr" class="text-white">Oficina de Registro</a>
-                            </li>
-                            <li>
-                                <a href="https://ci.ucr.ac.cr" class="text-white">Centro de Informática</a>
-                            </li>
-                        </ul>
-                    </div>
+                    </div>                   
                 </div>
             </section>
         </div>
