--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -26,6 +26,16 @@
             cursor: pointer;
         }
 
+        .card {
+            border: none !important;
+            box-shadow: none !important;
+        }
+
+        .card-footer {
+            border-top: none !important;
+            border-radius: 0 !important;
+        }
+
         input::-ms-reveal,
         input::-ms-clear {
             display: none !important;
@@ -84,20 +94,17 @@
                         }
                     </div>
                 </div>
-                <div class="card-footer text-center pt-2 pb-3 bg-info bg-opacity-25">
-                    <p>
-                        <small>
-                            <i>¿Aprobó algún módulo antes del 1 de enero de 2025?</i>
-                            <br />Solicite su contraseña a <span class="text-primary">soporte.metics@ucr.ac.cr</span>.
-                            
-                        </small>
+                <div class="card-footer text-center pt-2 pb-3" style="background-color: #333333; color: #fff; margin-bottom: 30px;">
+                    <p class="fw-bold" style="font-size: 1rem;margin-top: 10px;">
+                        ¿Aprobó algún módulo antes del 1 de enero de 2025?
+                        <br />
+                        Solicite su contraseña a
+                        <a href="mailto:soporte.metics@ucr.ac.cr" class="text-white fw-bold" style="text-decoration: none;">soporte.metics@ucr.ac.cr</a>.
                     </p>
-                    <hr />
-                    <small>
-                        <i>¿Es un nuevo usuario?</i>
-                        @Html.ActionLink("Regístrese aquí", "FormularioRegistro", "Usuario", new { }, new { @class = "link-primary" })
-                        
-                    </small>
+                    <p class="fw-bold" style="font-size: 1rem;  margin-bottom: 10px;">
+                        ¿Es un nuevo usuario?
+                        @Html.ActionLink("Regístrese aquí", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline fst-italic", aria_label = "Formulario de registro" })
+                    </p>
                 </div>
             </div>
         </div>
