Se elimina botón de calificaciones.

--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -114,7 +114,7 @@
                                 <td>@nombreCompleto</td>
                                 <td>@calificacion.participante.idParticipante</td>
                                 <td>@calificacion.estado</td>
-                                <td>@calificacion.horas_aprobadas</td>
+                                <td>@calificacion.horasAprobadas</td>
                                 <td class="text-center">@calificacion.calificacion</td>
                                 <td>
                                     @Html.ActionLink(" ", "EditarCalificacion", "Calificaciones", new { idGrupo = ViewBag.IdGrupo, idParticipante = calificacion.participante.idParticipante }, new { @class = "text-secondary bi bi-pencil-square" })
