--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -56,27 +56,44 @@
             {
                 <div class="d-flex justify-content-between mb-4">
                     <div>
-                        @using (Html.BeginForm("VerCalificaciones", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
+                        @using (Html.BeginForm("CargarDesdeExcel", "Calificaciones", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
-                            <div class="mb-3">
-                                <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
-                                    <i class="bi bi-file-earmark-spreadsheet me-1"></i>
-                                    Calificaciones
-                                </button>
-                            </div>
+                            <form>
+                                <div class="mb-3 d-flex" style="max-width: 600px">
+                                    <label for="file"></label>
+                                    <input type="file" class="form-control" name="file" id="file">
+                                    <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
+
+                                    <input type="hidden" name="idGrupo" id="idGrupo" value="@ViewBag.IdGrupo">
+                                </div>
+
+                                <div class="mb-4 bg-light p-3 rounded d-flex">
+                                    <h4><i class="bi bi-exclamation-circle-fill me-2 text-secondary"></i></h4>
+                                    <small class="text-muted">
+                                        Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
+                                        <br />
+                                        Correo Institucional, Horas Aprobadas, Calificación
+                                        <br />
+                                        @Html.ActionLink("Descargar plantilla", "DescargarPlantillaSubirCalificaciones", "Calificaciones", new { }, new { @class = "btn btn-small btn-outline-secondary mt-2" })
+                                    </small>
+                                </div>
+                            </form>
                         }
                     </div>
 
                     <div class="d-flex justify-content-end">
                         <div class="mx-1">
-                            @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   PDF", "ExportarCalificacionesPDF", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   Excel", "ExportarCalificacionesExcel", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
                         </div>
                         <div class="mx-1">
-                            @Html.ActionLink("   Word", "ExportarParticipantesWord", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                            @Html.ActionLink("   Word", "ExportarCalificacionesWord", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            <button class="btn btn-outline-primary" id="sendEmailButton"><i class="bi bi-send me-2"></i>Enviar por correo</button>
                         </div>
                     </div>
                 </div>
@@ -84,6 +101,7 @@
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
+                            <th scope="col"></th>
                             <th scope="col">Unidad Académica</th>
                             <th scope="col">Nombre</th>
                             <th scope="col">Primer<br>Apellido</th>
@@ -109,6 +127,9 @@
                                 nombreCompleto += " " + participante.segundoApellido;
                             }
                             <tr>
+                                <td>
+                                    <input type="checkbox" class="participante-checkbox" value="@participante.idParticipante" />
+                                </td>
                                 <td>@participante.unidadAcademica</td>
                                 <td>@participante.nombre</td>
                                 <td>@participante.primerApellido</td>
@@ -214,4 +235,22 @@ else
         document.getElementById("numeroGrupo").value = numeroGrupo;
         document.getElementById("idParticipante").value = idParticipante;
     }
+</script>
+
+<script>
+    document.getElementById('sendEmailButton').onclick = function () {
+        var selectedParticipants = [];
+        // Gather selected checkboxes
+        document.querySelectorAll('.participante-checkbox:checked').forEach(function (checkbox) {
+            selectedParticipants.push(checkbox.value);
+        });
+
+        // Create a comma-separated string
+        var participantesSeleccionados = selectedParticipants.join(',');
+
+        // Redirect to the ActionLink with the parameters
+        window.location.href = '@Url.Action("EnviarCalificaciones", "Calificaciones", new { idGrupo = "__idGrupo__", participantesSeleccionados = "__participantesSeleccionados__" })'
+            .replace('__idGrupo__', '@ViewBag.IdGrupo')
+            .replace('__participantesSeleccionados__', participantesSeleccionados);
+    };
 </script>
