Corrección estilo de botón Regresar.

--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -203,7 +203,7 @@
                 </table>
             }
             <hr />
-            <div class="col-auto">
+            <div class="d-flex my-4 justify-content-center">
                 <a href="@Url.Action("VerInscripciones", "Inscripcion")" class="btn btn-secondary btn-block">Regresar</a>
             </div>
         </div>
