Se añade recuadro de advertencia en el formulario de registro.

--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -102,7 +102,7 @@
                         <a href="mailto:soporte.metics@ucr.ac.cr" class="text-white fw-bold" style="text-decoration: none;">soporte.metics@ucr.ac.cr</a>.
                     </p>
                     <p class="fw-bold" style="font-size: 1rem;  margin-bottom: 10px;">
-                        ¿Es un nuevo usuario?
+                        ¿Va a llevar un módulo por primera vez?
                         @Html.ActionLink("Regístrese aquí", "FormularioRegistro", "Usuario", null, new { @class = "text-white fw-bold text-decoration-underline fst-italic", aria_label = "Formulario de registro" })
                     </p>
                 </div>
