--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -158,9 +158,9 @@ else
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-
+        
         // Handle change event of area dropdown
-        $('#areaDropdown').click(function () {
+        $('#areaDropdown').change(function () {
             var areaName = $(this).val();
 
             // Clear departamento and unidadAcademica dropdowns
