--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -45,7 +45,7 @@
 
                 <div class="d-flex justify-content-between mb-4">
                     <div>
-                        @using (Html.BeginForm("CargarDesdeExcel", "Calificaciones", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm("SubirExcelCalificaciones", "Calificaciones", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
                             <form>
@@ -62,7 +62,7 @@
                                     <small class="text-muted">
                                         Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
                                         <br />
-                                        Correo Institucional, Calificación
+                                        Correo Institucional, Calificación, Horas Aprobadas
                                     </small>
                                 </div>
                             </form>
