--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -113,7 +113,7 @@
                             <th scope="col">Correo Institucional</th>
                             <th class="text-center" scope="col" style="width: 10%">Total Horas<br>Inscritas</th>
                             <th class="text-center" scope="col" style="width: 10%">Total Horas<br>Aprobadas</th>
-                            @* <th class="text-center" scope="col" style="width:3.33%;"></th> *@
+                            <th class="text-center" scope="col" style="width:3.33%;"></th>
                             <th class="text-center" scope="col" style="width:3.33%;"></th>
                             <th class="text-center" scope="col" style="width:3.33%;"></th>
                             <th class="text-center" scope="col" style="width:3.33%;"></th>
@@ -177,9 +177,9 @@
                                                  idUsuario = participante.idParticipante,
                                                  nombreCompleto = $"{participante.nombre} {participante.primerApellido} {participante.segundoApellido}"
                                              },
-                                             new { @class = "text-secondary bi bi-key" })
+                                             new { @class = "text-secondary bi bi-fingerprint" })
                                 </td>
-                                @* <td>
+                                <td>
                                     @Html.ActionLink(" ", "CambiarContrasenaAdmin", "Usuario",
                                              new
                                              {
@@ -187,7 +187,7 @@
                                                  nombreCompleto = $"{participante.nombre} {participante.primerApellido} {participante.segundoApellido}"
                                              },
                                              new { @class = "text-secondary bi bi-key" })
-                                </td> *@
+                                </td>
                                 <td>
                                     <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@participante.idParticipante')">
                                         <i class="bi bi-trash"></i>
