Fix bug al registrarse un usuario.

--- a/webMetics/Views/Usuario/CambiarContrasenaAdmin.cshtml
+++ b/webMetics/Views/Usuario/CambiarContrasenaAdmin.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.NewLoginModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Actualizar Contraseña de Usuario";
+    ViewBag.Title = "Cambiar Contraseña";
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
