Se agregan medallas.

--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -96,6 +96,8 @@
                                         @Html.ActionLink("Crear un módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
                                         <hr class="dropdown-divider">
                                         @Html.ActionLink("Configuración del correo", "Index", "EmailSettings", new { }, new { @class = "dropdown-item" })
+                                        <hr class="dropdown-divider">
+                                        @Html.ActionLink("Medallas", "VerMedallas", "Medallas", new { }, new { @class = "dropdown-item" })
                                     </div>
                                 </li>
                             }
