--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                                         <hr class="dropdown-divider">
                                         @Html.ActionLink("Configuración del correo", "Index", "EmailSettings", new { }, new { @class = "dropdown-item" })
                                         <hr class="dropdown-divider">
-                                        @Html.ActionLink("Medallas", "VerMedallas", "Medallas", new { }, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Medallas", "ListaMedallas", "Medallas", new { }, new { @class = "dropdown-item" })
                                     </div>
                                 </li>
                             }
