--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -5,6 +5,33 @@
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
+<style>
+    .medalla-list-container {
+        max-height: 300px; /* Increased height */
+        overflow-y: auto;
+        border: 0px solid #ccc;
+        padding: 10px;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        gap: 10px; /* Added gap for better spacing */
+    }
+
+    .medalla-item {
+        display: flex; /* Use flexbox for vertical layout */
+        flex-direction: column; /* Stack image and checkbox vertically */
+        align-items: center; /* Center items horizontally */
+        text-align: center;
+        width: 200px;
+    }
+
+    .medalla-image {
+        max-width: 200px; /* Increased image size */
+        max-height: 200px;
+        margin-bottom: 5px;
+    }
+</style>
+
 @if (ViewBag.Role == 1 || ViewBag.Role == 2)
 {
     <div class="contenedor-tipos-actividades container-fluid">
@@ -42,26 +69,65 @@
             }
             else
             {
-                <!-- Agregar medallas (admin) -->
-                if (ViewBag.Role == 1)
+                <!-- Selector de medallas (admin) -->
+                @if (ViewBag.Role == 1)
                 {
                     <br />
-                    <div class="mb-4 bg-light p-3 rounded w-50">
-                        <div class="d-flex align-text-center">
-                            <h6><i class="bi bi-exclamation-circle-fill me-2 text-secondary"></i></h6>
-                            <small class="text-muted">Subir una imagen en formato <strong>PNG</strong> menor a 5 MB.</small>
+                    <div class="card">
+                        <div class="card-header" id="medallasHeader">
+                            <h3 class="mb-0">
+                                <button class="bi bi-chevron-down btn text-muted" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMedallas" aria-expanded="true" aria-controls="collapseMedallas">
+                                    Seleccionar Medallas
+                                </button>
+                            </h3>
                         </div>
-                        <div class="form-group mt-3">
-                            <form method="post" enctype="multipart/form-data" asp-controller="Participante" asp-action="SubirMedalla">
-                                <div class="d-flex justify-content-between">
-                                    <input name="idParticipante" value="@ViewBag.Participante.idParticipante" hidden />
-                                    <input type="file" name="imageFile" class="form-control" />
-                                    <button type="submit" class="btn btn-secondary ms-2 w-50"><i class="bi bi-plus-lg me-2"></i>Agregar medalla</button>
-                                </div>
-                            </form>
+
+                        <div id="collapseMedallas" class="collapse show" aria-labelledby="medallasHeader">
+                            <div class="card-body">
+                                <form method="post" action="@Url.Action("AsignarMedallas", "Participante")">
+                                    <input type="hidden" name="idParticipante" value="@ViewBag.Participante.idParticipante" />
+
+                                    <div class="d-flex justify-content-between mb-3">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" id="medallaSearch" onkeyup="filterMedals()" placeholder="Ingrese nombre de medalla">
+                                            <span class="input-group-text">
+                                                <i class="bi bi-search"></i>
+                                            </span>
+                                        </div>
+                                        <div class="d-flex justify-content-end ms-3">
+                                            <button type="submit" class="btn btn-secondary justify-content-end">Asignar</button>
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <div id="medallaList" class="medalla-list-container">
+                                            @if (ViewBag.TodasMedallas != null)
+                                            {
+                                                @foreach (var medalla in ViewBag.TodasMedallas)
+                                                {
+                                                    <div class="medalla-item">
+                                                        <img src="~/images/medallas/@medalla" alt="@medalla" class="medalla-image" />
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" name="selectedMedallas" value="@medalla" id="medalla-@medalla">
+                                                            <label class="form-check-label" for="medalla-@medalla">
+                                                                @medalla
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                }
+                                            }
+                                            else
+                                            {
+                                                <p>No hay medallas disponibles.</p>
+                                            }
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 }
+
                 <!-- Medallas -->
                 @if (ViewBag.Medallas != null)
                 {
@@ -72,6 +138,11 @@
                         @foreach (string nombreMedalla in ViewBag.Medallas)
                         {
                             <div class="card me-2" style="height: 305px;">
+                                <div class="card-header text-muted">
+                                    <div style="float:right">
+                                        <i class="bi bi-trash3 text-danger" type="button" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@nombreMedalla')"></i>
+                                    </div>
+                                </div>
                                 @{
                                     var medalPath = Directory.EnumerateFiles("wwwroot/images/medallas", nombreMedalla).FirstOrDefault();
                                 }
@@ -85,6 +156,7 @@
                         }
                     </div>
                 }
+                <br />
                 
                 var nombreCompleto = ViewBag.Participante.nombre;
                 nombreCompleto += " " + ViewBag.Participante.primerApellido;
@@ -207,6 +279,30 @@
                 <a href="@Url.Action("VerInscripciones", "Inscripcion")" class="btn btn-secondary btn-block">Regresar</a>
             </div>
         </div>
+
+        <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Eliminar medalla</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        ¿Está seguro de que desea eliminar esta medalla?
+                        <br />
+                        @using (Html.BeginForm("EliminarMedallaParticipante", "Medallas"))
+                        {
+                            <div class="modal-footer">
+                                <input type="hidden" id="idParticipante" name="idParticipante" value="@ViewBag.Participante.idParticipante">
+                                <input type="hidden" id="nombreMedalla" name="nombreMedalla">
+                                <input type="submit" class="btn btn-danger" value="Aceptar" />
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 }
 else
@@ -215,3 +311,26 @@ else
         window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
     </script>
 }
+<script>
+        function filterMedals() {
+        var input, filter, medallaList, medallas, i, txtValue;
+        input = document.getElementById("medallaSearch");
+        filter = input.value.toUpperCase();
+        medallaList = document.getElementById("medallaList");
+        medallas = medallaList.getElementsByClassName("medalla-item");
+
+        for (i = 0; i < medallas.length; i++) {
+            txtValue = medallas[i].textContent || medallas[i].innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                medallas[i].style.display = "";
+            } else {
+                medallas[i].style.display = "none";
+            }
+        }
+    }
+</script>
+<script type="text/javascript">
+    function actualizarModalEliminar(nombreMedalla) {
+        document.getElementById("nombreMedalla").value = nombreMedalla;
+    }
+</script>
